[project]
name = "CSU_GEOS_sampler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask[distributed]==2025.12.0",
    "h5py>=3.16.0",
    "ipython>=9.12.0",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pykdtree>=1.4.3",
    "scipy>=1.17.1",
    "tables>=3.11.1",
    "tqdm>=4.67.3",
    "xarray>=2026.2.0",
]
